force-app/main/default/objects/Error_Log__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <label>Additional Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>