force-app/main/default/objects/Error_Log__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>