force-app/main/default/objects/Error_Log__c/fields/Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User__c</fullName>
    <label>Logged In User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>