force-app/main/default/objects/Error_Log__c/fields/Record_Reference__c.field-meta.xml
<CustomField>
    <fullName>Record_Reference__c</fullName>
    <label>Record Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>