force-app/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Component_Name__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Error_Code__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>Logged_In_User__c</columns>
    <columns>Record_Reference__c</columns>
    <columns>Additional_Info__c</columns>
    <columns>Error_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>